--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -7,7 +7,7 @@
 /* font-family: 'Montserrat', sans-serif; */
 
 
-/* Extra small devices (phones, less than 576px) */
+/* Small devices (phones, less than 576px) */
 @media (max-width: 575.98px) {
     .header-bg {
         background-image: linear-gradient(rgba(215, 233, 247), white);
@@ -212,12 +212,26 @@
     }
 }
 
+
+/* Extra small devices (phones, less than 420px) */
+@media (max-width: 420px) {
+    .title-text {
+        text-align: center;
+        color: var(--color-primary-dark);
+        line-height: 3.5rem;
+        font-size: 2.1rem !important;
+        font-family: Arial;
+    }
+}
+
+/* Small to medium devices (phones with min-height of 780px) */
 @media (min-height: 780px) and (max-width: 575.98px) {
     .price-container {
         margin-top: 10vh;
     }
 }
 
+/* Extra small devices (phones with min-height of 450px) */
 @media (min-height: 450px) and (max-height: 779px) {
     .price-container {
         margin-top: 3.5rem;
