--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -23,6 +23,7 @@
         font-size: 1.2rem; /* Smaller font size for description */
     }
     .custom-text-style {
+        color: var(--mobile-text-color);
         font-size: 0.9rem; /* Adjust as needed */
     }
     .price {
@@ -86,6 +87,8 @@
     }
 
     .image-caption {
+        font-family: var(--mobile-font-family);
+        color: var(--mobile-text-color);
         font-size: 0.8rem;
     }
 
@@ -178,8 +181,12 @@
         text-align: center;
         color: var(--color-primary-dark);
         line-height: 3.5rem;
-        font-size: 2.3rem !important;
+        font-size: 1.8rem !important;
         font-family: Arial;
+    }
+    
+    .price-container {
+        margin-top: 3rem;
     }
 }
 
@@ -212,28 +219,3 @@
     }
 }
 
-
-/* Extra small devices (phones, less than 420px) */
-@media (max-width: 420px) {
-    .title-text {
-        text-align: center;
-        color: var(--color-primary-dark);
-        line-height: 3.5rem;
-        font-size: 2.1rem !important;
-        font-family: Arial;
-    }
-}
-
-/* Small to medium devices (phones with min-height of 780px) */
-@media (min-height: 780px) and (max-width: 575.98px) {
-    .price-container {
-        margin-top: 10vh;
-    }
-}
-
-/* Extra small devices (phones with min-height of 450px) */
-@media (min-height: 450px) and (max-height: 779px) {
-    .price-container {
-        margin-top: 3.5rem;
-    }
-}
