--- a/styles/page2/mobile.css
+++ b/styles/page2/mobile.css
@@ -19,6 +19,7 @@
         color: var(--mobile-text-color);
         font-size: 1.1rem;
         font-family: var(--mobile-font-family);
+        line-height: 1.7rem;
     }
 
     .section-title {
@@ -31,5 +32,6 @@
         font-family: var(--mobile-font-family);
         color: var(--mobile-text-color);
         font-size: 1.1rem;
+        line-height: 1.7rem;
     }
 }
